apps/medium-place/teslamate/grafana/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teslamate-grafana
  namespace: medium-place
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: teslamate
    app.kubernetes.io/component: server
    app.kubernetes.io/version: 1.26.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: teslamate
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: http://vault.infrastructure.svc.cluster.local:8200
        vault.security.banzaicloud.io/vault-role: teslamate
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "^\\d+\\.\\d+\\.\\d+$"
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: teslamate
        app.kubernetes.io/component: server
        app.kubernetes.io/version: 1.26.1
    spec:
      serviceAccountName: teslamate-grafana
      securityContext:
        fsGroup: 1001
      containers:
        - name: grafana
          image: teslamate/grafana:1.26.1
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
          resources:
            requests:
              cpu: 32m
              memory: 64Mi
            limits:
              cpu: 64m
              memory: 128Mi
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place
        labels:
          app.kubernetes.io/name: grafana
          app.kubernetes.io/part-of: teslamate
          app.kubernetes.io/component: server
      spec:
        storageClassName: scw-bssd-retain
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
