apps/medium-place/teslamate/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate-grafana
  namespace: medium-place
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: teslamate
    app.kubernetes.io/component: server
    app.kubernetes.io/version: 1.26.1
spec:
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: teslamate
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
